crates/docx/src/snapshots/doc_converter_docx__document__tests__breaks_and_tabs.snap
---
source: crates/docx/src/document.rs
expression: body
---
{
  "id": 1,
  "items": [
    {
      "paragraph": {
        "id": 2,
        "ppr": {
          "style": null,
          "num_pr": null,
          "spacing": null,
          "ind": null,
          "jc": null,
          "keep_next": null,
          "keep_lines": null,
          "page_break_before": null,
          "widow_control": null,
          "outline_lvl": null,
          "p_bdr": null,
          "shd": null,
          "tabs": [],
          "r_pr": null,
          "sect_pr": null,
          "unknown": []
        },
        "mark_rpr": {
          "style": null,
          "r_fonts": null,
          "b": null,
          "i": null,
          "caps": null,
          "small_caps": null,
          "strike": null,
          "dstrike": null,
          "vanish": null,
          "outline": null,
          "shadow": null,
          "emboss": null,
          "imprint": null,
          "color": null,
          "sz": null,
          "sz_cs": null,
          "highlight": null,
          "u": null,
          "vert_align": null,
          "spacing": null,
          "position": null,
          "unknown": []
        },
        "runs": [
          {
            "run": {
              "id": 3,
              "rpr": {
                "style": null,
                "r_fonts": null,
                "b": null,
                "i": null,
                "caps": null,
                "small_caps": null,
                "strike": null,
                "dstrike": null,
                "vanish": null,
                "outline": null,
                "shadow": null,
                "emboss": null,
                "imprint": null,
                "color": null,
                "sz": null,
                "sz_cs": null,
                "highlight": null,
                "u": null,
                "vert_align": null,
                "spacing": null,
                "position": null,
                "unknown": []
              },
              "style_ref": null,
              "content": [
                {
                  "text": "First line"
                },
                {
                  "break": "line"
                },
                {
                  "text": "second line"
                }
              ]
            }
          }
        ],
        "style_ref": null,
        "numbering_ref": null,
        "section_break": null
      }
    },
    {
      "paragraph": {
        "id": 4,
        "ppr": {
          "style": null,
          "num_pr": null,
          "spacing": null,
          "ind": null,
          "jc": null,
          "keep_next": null,
          "keep_lines": null,
          "page_break_before": null,
          "widow_control": null,
          "outline_lvl": null,
          "p_bdr": null,
          "shd": null,
          "tabs": [],
          "r_pr": null,
          "sect_pr": null,
          "unknown": []
        },
        "mark_rpr": {
          "style": null,
          "r_fonts": null,
          "b": null,
          "i": null,
          "caps": null,
          "small_caps": null,
          "strike": null,
          "dstrike": null,
          "vanish": null,
          "outline": null,
          "shadow": null,
          "emboss": null,
          "imprint": null,
          "color": null,
          "sz": null,
          "sz_cs": null,
          "highlight": null,
          "u": null,
          "vert_align": null,
          "spacing": null,
          "position": null,
          "unknown": []
        },
        "runs": [
          {
            "run": {
              "id": 5,
              "rpr": {
                "style": null,
                "r_fonts": null,
                "b": null,
                "i": null,
                "caps": null,
                "small_caps": null,
                "strike": null,
                "dstrike": null,
                "vanish": null,
                "outline": null,
                "shadow": null,
                "emboss": null,
                "imprint": null,
                "color": null,
                "sz": null,
                "sz_cs": null,
                "highlight": null,
                "u": null,
                "vert_align": null,
                "spacing": null,
                "position": null,
                "unknown": []
              },
              "style_ref": null,
              "content": [
                {
                  "text": "Col1"
                },
                "tab",
                {
                  "text": "Col2"
                }
              ]
            }
          }
        ],
        "style_ref": null,
        "numbering_ref": null,
        "section_break": null
      }
    },
    {
      "paragraph": {
        "id": 6,
        "ppr": {
          "style": null,
          "num_pr": null,
          "spacing": null,
          "ind": null,
          "jc": null,
          "keep_next": null,
          "keep_lines": null,
          "page_break_before": null,
          "widow_control": null,
          "outline_lvl": null,
          "p_bdr": null,
          "shd": null,
          "tabs": [],
          "r_pr": {
            "style": null,
            "r_fonts": null,
            "b": null,
            "i": null,
            "caps": null,
            "small_caps": null,
            "strike": null,
            "dstrike": null,
            "vanish": null,
            "outline": null,
            "shadow": null,
            "emboss": null,
            "imprint": null,
            "color": null,
            "sz": null,
            "sz_cs": null,
            "highlight": null,
            "u": null,
            "vert_align": null,
            "spacing": null,
            "position": null,
            "unknown": []
          },
          "sect_pr": null,
          "unknown": []
        },
        "mark_rpr": {
          "style": null,
          "r_fonts": null,
          "b": null,
          "i": null,
          "caps": null,
          "small_caps": null,
          "strike": null,
          "dstrike": null,
          "vanish": null,
          "outline": null,
          "shadow": null,
          "emboss": null,
          "imprint": null,
          "color": null,
          "sz": null,
          "sz_cs": null,
          "highlight": null,
          "u": null,
          "vert_align": null,
          "spacing": null,
          "position": null,
          "unknown": []
        },
        "runs": [
          {
            "run": {
              "id": 7,
              "rpr": {
                "style": null,
                "r_fonts": null,
                "b": null,
                "i": null,
                "caps": null,
                "small_caps": null,
                "strike": null,
                "dstrike": null,
                "vanish": null,
                "outline": null,
                "shadow": null,
                "emboss": null,
                "imprint": null,
                "color": null,
                "sz": null,
                "sz_cs": null,
                "highlight": null,
                "u": null,
                "vert_align": null,
                "spacing": null,
                "position": null,
                "unknown": []
              },
              "style_ref": null,
              "content": [
                {
                  "break": "page"
                }
              ]
            }
          }
        ],
        "style_ref": null,
        "numbering_ref": null,
        "section_break": null
      }
    },
    {
      "paragraph": {
        "id": 8,
        "ppr": {
          "style": null,
          "num_pr": null,
          "spacing": null,
          "ind": null,
          "jc": null,
          "keep_next": null,
          "keep_lines": null,
          "page_break_before": null,
          "widow_control": null,
          "outline_lvl": null,
          "p_bdr": null,
          "shd": null,
          "tabs": [],
          "r_pr": null,
          "sect_pr": null,
          "unknown": []
        },
        "mark_rpr": {
          "style": null,
          "r_fonts": null,
          "b": null,
          "i": null,
          "caps": null,
          "small_caps": null,
          "strike": null,
          "dstrike": null,
          "vanish": null,
          "outline": null,
          "shadow": null,
          "emboss": null,
          "imprint": null,
          "color": null,
          "sz": null,
          "sz_cs": null,
          "highlight": null,
          "u": null,
          "vert_align": null,
          "spacing": null,
          "position": null,
          "unknown": []
        },
        "runs": [
          {
            "run": {
              "id": 9,
              "rpr": {
                "style": null,
                "r_fonts": null,
                "b": null,
                "i": null,
                "caps": null,
                "small_caps": null,
                "strike": null,
                "dstrike": null,
                "vanish": null,
                "outline": null,
                "shadow": null,
                "emboss": null,
                "imprint": null,
                "color": null,
                "sz": null,
                "sz_cs": null,
                "highlight": null,
                "u": null,
                "vert_align": null,
                "spacing": null,
                "position": null,
                "unknown": []
              },
              "style_ref": null,
              "content": [
                {
                  "text": "After the page break"
                }
              ]
            }
          }
        ],
        "style_ref": null,
        "numbering_ref": null,
        "section_break": null
      }
    },
    {
      "sect_pr": {
        "page_size": {
          "width": 11906,
          "height": 16838
        },
        "orientation": "portrait",
        "margins": {
          "top": 1134,
          "right": 1134,
          "bottom": 1134,
          "left": 1134,
          "header": 709,
          "footer": 709,
          "gutter": 0
        },
        "columns": {
          "count": 1,
          "space": 708,
          "equal_width": true,
          "separator": false,
          "defs": []
        },
        "title_pg": false,
        "header_default": null,
        "header_first": null,
        "header_even": null,
        "footer_default": null,
        "footer_first": null,
        "footer_even": null,
        "section_type": null,
        "unknown": [
          [
            "docGrid",
            "<w:docGrid w:linePitch=\"360\"/>"
          ]
        ]
      }
    }
  ],
  "sections": [
    {
      "id": 10,
      "properties": {
        "page_size": {
          "width": 11906,
          "height": 16838
        },
        "orientation": "portrait",
        "margins": {
          "top": 1134,
          "right": 1134,
          "bottom": 1134,
          "left": 1134,
          "header": 709,
          "footer": 709,
          "gutter": 0
        },
        "columns": {
          "count": 1,
          "space": 708,
          "equal_width": true,
          "separator": false,
          "defs": []
        },
        "title_pg": false,
        "header_default": null,
        "header_first": null,
        "header_even": null,
        "footer_default": null,
        "footer_first": null,
        "footer_even": null,
        "section_type": null,
        "unknown": [
          [
            "docGrid",
            "<w:docGrid w:linePitch=\"360\"/>"
          ]
        ]
      },
      "header_default": null,
      "header_first": null,
      "header_even": null,
      "footer_default": null,
      "footer_first": null,
      "footer_even": null,
      "title_pg": false,
      "page_size": {
        "width": 11906,
        "height": 16838
      },
      "orientation": "portrait",
      "margins": {
        "top": 1134,
        "right": 1134,
        "bottom": 1134,
        "left": 1134,
        "header": 709,
        "footer": 709,
        "gutter": 0
      },
      "columns": {
        "count": 1,
        "space": 708,
        "equal_width": true,
        "separator": false,
        "defs": []
      }
    }
  ]
}
